--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>萬幽聯盟 | 抽獎程式</title>
+    <title>幽羽閣聯盟 | 抽獎程式</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <div id="main-wrapper">
 	
         <div class="contrast-bg">
-            <h1>萬幽聯盟 | 抽獎程式</h1>
+            <h1>幽羽閣聯盟 | 抽獎程式</h1>
             <p>By Shela 2024/11/25</p>
         </div>
         
